--- a/app/src/main/res/layout/customviewxml.xml
+++ b/app/src/main/res/layout/customviewxml.xml
@@ -1,35 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="GPS inactive"
-        android:id="@+id/tracer"
-        android:layout_marginTop="55dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="Current Speed: N/A"
-        android:id="@+id/currentspeed"
-        android:layout_marginTop="75dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="Average Speed: N/A"
-        android:id="@+id/averagespeed"
-        android:layout_marginTop="115dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="Overall Time: 0s"
-        android:id="@+id/overalltime"
-        android:layout_marginTop="95dp"/>
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Button
         android:layout_width="match_parent"
@@ -37,10 +7,29 @@
         android:id="@+id/start"
         android:text="START"/>
 
-    <com.example.english.assignment3.GraphView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_marginTop="135dp"
-        android:id="@+id/graph"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GPS inactive"
+        android:id="@+id/tracer" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Speed: N/A"
+        android:id="@+id/currentspeed" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Average Speed: N/A"
+        android:id="@+id/averagespeed" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Overall Time: 0s"
+        android:id="@+id/overalltime"/>
+
 
 </merge>
